small changes on ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -69,7 +69,7 @@ The last task may possible be done in collaboration with [Simulation-based evalu
 
 ## Contact
 
-Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].  
+Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Egil Eide]. 
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Adil Rasheed]: https://www.ntnu.no/ansatte/adil
@@ -83,3 +83,4 @@ Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Praveen Jain].
 [David Wu]: https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2625767?locale-attribute=en
 [Zeabuz AS]: https://zeabuz.com
 [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality]: https://autoferry.github.io/colav/2020/04/16/simulation-based-validation/
+[Egil Eide]: https://www.ntnu.no/ansatte/egil.eide
