changed title on ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Digital Twin of the Trondheim City Canal
+title: Automatic comprehension of traffic patterns in an urban harbour environment
 category: LTP
 ---
 |<img src="{{site.url}}/assets/lowestpd.png" width="700"> | 
