--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -52,7 +52,11 @@ The main goal of the specialization project is to make sure that we have a suffi
 * Include shore constraints and traffic rules (also known as the "COLREGS") as part of the prediction scheme.
 * Perform simulations based on the prediction method. Evaluate how realistic the simulations appear. To which extent should the predictions be data driven, and to which extent should they use models of motion control systems?
 
-The last task may be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality].
+
+
+## Collaboration
+
+This is a project that is particularly suitable for collaboration with several other masters- and PhD-level projects. In particular, the last task suggested for the master thesis can naturally be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality].
 
 
 |<img src="{{site.url}}/assets/ais-data-trd.png" width="670"> | 
