further revisions on ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -56,7 +56,7 @@ The main goal of the specialization project is to make sure that we have a suffi
 
 ## Collaboration
 
-This is a project that is particularly suitable for collaboration with several other masters- and PhD-level projects. In particular, the last task suggested for the master thesis can naturally be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality].
+This is a project that is particularly suitable for collaboration with several other masters- and PhD-level projects. In particular, the last task suggested for the master thesis can naturally be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality]. The data recording and sensor fusion parts of the project can be done in collaboration with [Joint tracking and localization].
 
 
 |<img src="{{site.url}}/assets/ais-data-trd.png" width="670"> | 
@@ -86,3 +86,4 @@ Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Egil Eide].
 [Zeabuz AS]: https://zeabuz.com
 [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality]: https://autoferry.github.io/colav/2020/04/16/simulation-based-validation/
 [Egil Eide]: https://www.ntnu.no/ansatte/egil.eide
+[Joint tracking and localization]: https://autoferry.github.io/sf/2020/04/09/trackinglocalization/
