further revisions on ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -56,8 +56,7 @@ The main goal of the specialization project is to make sure that we have a suffi
 
 ## Collaboration
 
-This is a project that is particularly suitable for collaboration with several other masters- and PhD-level projects. In particular, the last task suggested for the master thesis can naturally be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality]. The data recording and sensor fusion parts of the project can be done in collaboration with [Joint tracking and localization]. A couple of other proposals for specialization/master projects also cover long-term vessel prediction. These include [Topics on obstacle intent inference and motion model parameter estimation] and [COLREG-compliant path following and collision avoidance with moving obstacles in the Trondheim fjord].
-
+This is a project that is particularly suitable for collaboration with several other masters- and PhD-level projects. In particular, the last task suggested for the master thesis can naturally be done in collaboration with [Simulation-based evaluation of autonomous guidance systems with collision avoidance functionality]. The data recording and sensor fusion parts of the project can be done in collaboration with [Joint tracking and localization]. A couple of other proposals for specialization/master projects also cover long-term vessel prediction. These include [Topics on obstacle intent inference and motion model parameter estimation] and [COLREG-compliant path following and collision avoidance with moving obstacles in the Trondheim fjord]. 
 
 |<img src="{{site.url}}/assets/ais-data-trd.png" width="670"> | 
 | Historical AIS data show many patterns for how ships tend to move. Can we establish similar patterns for a harbour area by means of radar and camera based tracking?  | 
@@ -73,7 +72,7 @@ This is a project that is particularly suitable for collaboration with several o
 
 Supervisors: [Edmund Brekke], [Adil Rasheed], [Emil Thyri] and [Egil Eide]. 
 
-[Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
+[Edmund Brekke]: https://www.ntnu.edu/employees/edmund.brekke
 [Adil Rasheed]: https://www.ntnu.no/ansatte/adil
 [Emil Thyri]: https://www.ntnu.edu/employees/emil.h.thyri
 [Praveen Jain]: https://www.ntnu.edu/employees/ravinder.p.k.jain
