further revisions hammerdance

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -54,10 +54,10 @@ Dorigatti et al. (2020): “[Report 4: Severity of 2019-novel coronavirus (nCoV)
 
 Supervisor: [Edmund Brekke], [Thor Inge Fossen] and [Adil Rasheed] 
 
-[Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
+[Edmund Brekke]: https://www.ntnu.edu/employees/edmund.brekke
 [Pueyo2020]: https://medium.com/@tomaspueyo/coronavirus-the-hammer-and-the-dance-be9337092b56
 [Wilson2009]: https://www.ncbi.nlm.nih.gov/pubmed/19573509
 [Dorigatti2020]: https://www.imperial.ac.uk/media/imperial-college/medicine/sph/ide/gida-fellowships/Imperial-College-COVID19-severity-10-02-2020.pdf
-[Trond Andresen]: www.ntnu.edu/employees/trond.andresen
+[Trond Andresen]: https://www.ntnu.edu/employees/trond.andresen
 [Thor Inge Fossen]: https://www.ntnu.edu/employees/thor.fossen
 [Adil Rasheed]: www.ntnu.edu/employees/adil.rasheed
