further revisions hammerdance

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -52,7 +52,7 @@ Dorigatti et al. (2020): “[Report 4: Severity of 2019-novel coronavirus (nCoV)
 
 ## Contact
 
-Supervisor: [Edmund Brekke], [Thor Inge Fossen] and [Adil Rasheed] 
+Supervisor: [Edmund Brekke] and [Thor Inge Fossen]. 
 
 [Edmund Brekke]: https://www.ntnu.edu/employees/edmund.brekke
 [Pueyo2020]: https://medium.com/@tomaspueyo/coronavirus-the-hammer-and-the-dance-be9337092b56
