one more reference in corona project

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -45,6 +45,8 @@ In the MSc thesis the goal is to investigate the suitability of different infect
 ## References
 Pueyo, T. (2020). "[Coronavirus: The Hammer and the Dance.][Pueyo2020]", Medium.com.
 
+Favero et al. (2020): "[Restarting the Economy While Saving Lives Under COVID-19.][Favero2020]", SSRN. 
+
 Wilson, N. and Baker, M. G. (2009): “[The emerging influenza pandemic: estimating the case fatality ratio.][Wilson2009]”, Euro Surveill.
 
 Dorigatti et al. (2020): “[Report 4: Severity of 2019-novel coronavirus (nCoV)][Dorigatti2020]”, Imperial College London COVID-19 Response Team.
@@ -60,4 +62,5 @@ Supervisor: [Edmund Brekke] and [Thor Inge Fossen].
 [Dorigatti2020]: https://www.imperial.ac.uk/media/imperial-college/medicine/sph/ide/gida-fellowships/Imperial-College-COVID19-severity-10-02-2020.pdf
 [Trond Andresen]: https://www.ntnu.edu/employees/trond.andresen
 [Thor Inge Fossen]: https://www.ntnu.edu/employees/thor.fossen
-[Adil Rasheed]: www.ntnu.edu/employees/adil.rasheed
+[Adil Rasheed]: https://www.ntnu.edu/employees/adil.rasheed
+[Favero2020]: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3580626
