more edits of corona project

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -23,10 +23,10 @@ In the specialization project the main focus will be on building models for the 
 The following tasks are proposed for the specialization project: 
 
 * Conduct a study on relevant literature on epidemic modelling in general and the coronavirus outbreak in particular.
-* Model the pandemic: Compare simulation-based models (e.g., cellular automata) with aggregate models (e.g., differential equations). 
-* State estimation: Using limited and possibly non-representative data: Estimate and predict the number of infections and infection rate. 
-* Parameter estimation: Estimate the infectiousness and case fatality ratio
-* Investigate how the different model parameters can affect the estimates. How reliable are the estimates? Perform consistency analysis.
+* Model the pandemic: Compare individual-based models with aggregate models. Define the state vector and underlying parameters. 
+* State estimation: Using limited and possibly non-representative data: Estimate and predict the number of infections and the effective reproduction number. 
+* Parameter estimation: Estimate the basic reproduction number and the case fatality ratio. 
+* Investigate how uncertainty in the different model parameters can affect the estimates. How reliable are the estimates? Perform consistency analysis.
 * Write report.
 
 ## Proposed Tasks for the master thesis
