pueyo illustration in corona project

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -12,6 +12,9 @@ At the core of this is a problem of state estimation in a complex dynamic system
 Models of different levels of fidelity have been used in attempts to understand and predict the spread of the coronavirus. Other researchers have focused on estimating key parameters such as the reproduction number and the case fatality ratio. Estimating these parameters has been difficult, because the researchers have had to use non-representative sample populations (e.g., the predominantly old population onboard Diamond Princess). 
 
 
+|<img src="{{site.url}}/assets/pueyograph.png" width="900"> | 
+|<span style="color:#959595"> Etimates of true and registered cases in Wuhan. From Pueyo (2020).</span>| 
+
 ## Scope
 
 The goal of this assignment is to develop closed-loop simulations of the infectious disease problem, including both simulation of the virus spread itself, the state- and parameter estimation needed for situational awareness, and infection control measures. 
