pueyo illustration in corona project

--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -50,6 +50,8 @@ Pueyo, T. (2020). "[Coronavirus: The Hammer and the Dance.][Pueyo2020]", Medium.
 
 Favero et al. (2020): "[Restarting the Economy While Saving Lives Under COVID-19.][Favero2020]", SSRN. 
 
+Ferretti et al (2020): "[Quantifying SARS-CoV-2 transmission suggests epidemic control with digital contact tracing][Ferretti2020]", Science Magazine. 
+
 Wilson, N. and Baker, M. G. (2009): “[The emerging influenza pandemic: estimating the case fatality ratio.][Wilson2009]”, Euro Surveill.
 
 Dorigatti et al. (2020): “[Report 4: Severity of 2019-novel coronavirus (nCoV)][Dorigatti2020]”, Imperial College London COVID-19 Response Team.
@@ -67,3 +69,4 @@ Supervisor: [Edmund Brekke] and [Thor Inge Fossen].
 [Thor Inge Fossen]: https://www.ntnu.edu/employees/thor.fossen
 [Adil Rasheed]: https://www.ntnu.edu/employees/adil.rasheed
 [Favero2020]: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3580626
+[Ferretti2020]: https://science.sciencemag.org/content/sci/early/2020/04/09/science.abb6936.full.pdf
