--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -18,7 +18,7 @@ Models of different levels of fidelity have been used in attempts to understand 
 ## Scope
 
 The goal of this assignment is to develop closed-loop simulations of the infectious disease problem, including both simulation of the virus spread itself, the state- and parameter estimation needed for situational awareness, and infection control measures. 
-While these results probably will come too late to be of much use in the current fight against SARS-Cov-19, the framework can be useful in preparing against future pandemics caused by slightly different viruses, and in assessing the robustness of the different infection control strategies. The work will build upon recent results from the [NTNU COVID-19 Taskforce].  
+While these results probably will come too late to be of much use in the current fight against SARS-Cov-19, the framework can be useful for preparations against future pandemics caused by slightly different viruses, and in assessing the robustness of the different infection control strategies. The work will build upon recent results from the [NTNU COVID-19 Taskforce].  
 
 ## Proposed Tasks for the 5th year project
 
