--- a/_posts/2020-04-08-corona.md
+++ b/_posts/2020-04-08-corona.md
@@ -52,9 +52,12 @@ Favero et al. (2020): "[Restarting the Economy While Saving Lives Under COVID-19
 
 Ferretti et al (2020): "[Quantifying SARS-CoV-2 transmission suggests epidemic control with digital contact tracing][Ferretti2020]", Science Magazine. 
 
+Johansen, P. A (2020): “[Forskere kritiserer myndighetenes metode for smitteberegning][Johansen2020]”, Aftenposten.
+
 Wilson, N. and Baker, M. G. (2009): “[The emerging influenza pandemic: estimating the case fatality ratio.][Wilson2009]”, Euro Surveill.
 
 Dorigatti et al. (2020): “[Report 4: Severity of 2019-novel coronavirus (nCoV)][Dorigatti2020]”, Imperial College London COVID-19 Response Team.
+
 
 
 ## Contact
@@ -71,3 +74,4 @@ Supervisor: [Edmund Brekke] and [Thor Inge Fossen].
 [Favero2020]: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3580626
 [Ferretti2020]: https://science.sciencemag.org/content/sci/early/2020/04/09/science.abb6936.full.pdf
 [NTNU COVID-19 Taskforce]: https://www.ntnu.edu/biotechnology/ntnu-covid-19
+[Johansen2020]: https://www.aftenposten.no/norge/i/8mMpgd/forskere-kritiserer-myndighetenes-metode-for-smitteberegning-deres-anslag-viser-at-smitten-i-norge-kan-vaere-paa-vei-oppover?
