--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -5,43 +5,34 @@ category: SF
 ---
 ## Background
 
+The Poisson Multi-Bernoulli Mixture (PMBM) filter is a gold standard for multi-target tracking. It is a sophisticated variation of Multiple Hypothesis Tracking (MHT), where the probabilities of all sufficiently plausible data association hypotheses are calculated. 
+For each of the data association hypotheses in the prior distribution, there will be several new association hypotheses in the posterior distribution. This differs from tracking methods such as Joint Probabilistic Data Association (JPDA) where the data association hypotheses are combined after every estimation cycle in order to mitigate complexity. 
 
+ This leads to an exponential growth in the number of hypotheses, which typically is mitigated by pruning low-probability hypotheses. 
+ Unfortunately, it will inevitably happen sooner or later that the true hypothesis is among those that are pruned. To mitigate the impact of this it is desirable to maintain individual track components, even if they fail to be supported by any hypothesis. To achieve this, we have to calculate the marginal probability that a given track component corresponds to a real target. 
 
+In the context of the JPDA, techniques have been developed for calculating such marginal probabilities without explicit hypothesis enumeration. It is possible to evaluate these exactly by formulating the problem as marginalisation in a factor graph. A more popular alternative is Loopy Belief Propagation (LBP), which also builds upon a factor graph formulation, but is more straightforward to implement due to its approximative nature.  
 
-To safely navigate among other ships, an autonomous ship needs means to keep track of where other ships are as well as their motions. 
-On the fundamental level, there are two ways to achieve this. On the one hand, ships may broadcast their locations and other relevant information to each other. 
-All ships of a certain size are obliged to do this through the Automatic Identification System (AIS). 
-On the other hand, ships can perceive their environment including other ships by means of exteroceptive sensors such as radar, lidar, optical cameras and infrared cameras. 
 
 |<img src="{{site.url}}/assets/ais_slide.png" width="700"> | 
 
-AIS is easy to work with because AIS data are inherently tidy: There is a unique measurement from each boat that has an AIS transmitter. 
-For radar, on the other hand, one must always solve the problem of data association: 
-Of several returns in a radar image one must decide which return comes from which ship. 
-However, radar or other exteroceptive sensors are always needed because not all ships have AIS, and because AIS depends on satellite communication with its own reliability issues. 
 
-In the [Autosea project][Autosea], both radar and AIS have been used as information sources in collision avoidance (COLAV) experiments. 
-However, the two data sources were never used together, because a sufficiently mature algorithm for fusing radar and AIS never was developed. 
-
-It is not immediately obvious how radar and AIS should be fused in order to benefit maximally from the two data sources complementary properties. 
-One can, however, expect that optimal fusion only is possible if the fusion algorithm is based on an optimal approach to multi-target tracking. 
-Such an approach is provided by the Poisson Multi-Bernoulli Mixture (PMBM) filter, which has emerged as the de facto gold standard in multi-target tracking during the last decade. 
 
 
 ## Scope
 
-During this assignment, the candidate will develop a multi-target tracking algorithm that fuses both radar data and AIS data within the PMBM framework. 
+The purpose of this project is to investigate whether exact and approximative factor graph techniques (e.g., Bayes tree and LBP) can be used to calculate marginal association probabilities in MHT/PMBM. The main challenge, and difference from the use of similar techniques in JPDA, is that the solution now must include marginalisation over several prior association hypotheses, instead of just a single prior association hypothesis.
 
 ## Proposed Tasks for the 5th year project
 
-In the specialization project the main focus will be on mastering the fundamental building blocks of PMBM and radar-AIS fusion. The following tasks are proposed for the specialization project: 
+The following tasks are proposed for the specialisation project: 
 
-* Make yourself familiar with multi-target tracking, random finite sets, MHT and PMBM. 
-* Design simple toy scenarios that will enable careful analysis of the expected benefits of radar-AIS fusion. 
-* Revise the hypothesis structure of the PMBM filter so that its hypotheses not only are able to account for associations between measurements in consecutive radar scans, but also associations between these and AIS tracks. 
-* Revise the expressions for the probabilities of the association hypotheses according to the revision of the hypothesis structure. 
-* Revise the estimation of target kinematics according to the two data sources.
-* Test the revisions in simulations. 
+* Bla bla. 
+* Bla bla
+* Bla bla
+* Bla bla 
+* Bla bla
+* Bla bla
 * Write report.
 
 ## Proposed Tasks for the master thesis
@@ -70,10 +61,6 @@ This is a challenging project that goes to the core of modern theory in sensor f
 
 ## References
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
-
-Habtemariam et al. (2014): “[Measurement levelAIS/radar fusion][Habtemariam2014]”, Signal Processing.
-
-Liland (2017): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
 
 
 ## Contact
