--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The PMBM filter 2: Radar-AIS fusion
+title: The PMBM filter 2 - Radar-AIS fusion
 category: SF
 ---
 ## Background
