--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The PMBM filter 4: Graphical model techniques
+title: The PMBM filter 4 - Graphical model techniques
 category: SF
 ---
 ## Background
