--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -27,7 +27,7 @@ The purpose of this project is to investigate whether exact and approximative fa
 
 The following tasks are proposed for the specialisation project: 
 
-* Bla bla. 
+* Make yourself familiar with MHT, PMBM and existing implementations that you can build upon. 
 * Bla bla
 * Bla bla
 * Bla bla 
