--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -28,11 +28,11 @@ The purpose of this project is to investigate whether exact and approximative fa
 The following tasks are proposed for the specialisation project: 
 
 * Make yourself familiar with MHT, PMBM and existing implementations that you can build upon. 
-* Bla bla
-* Bla bla
-* Bla bla 
-* Bla bla
-* Bla bla
+* Make yourself familiar with factor graphs, Bayes tree and belief propagation. 
+* Formulate a factor graph model for marginal track probabilities in multi-hypothesis tracking.
+* Implement a Bayes tree solution for simple toy examples. 
+* Implement an LBP solution for simple toy examples.
+* Compare Bayes tree and LBP with brute force hypothesis enumeration.
 * Write report.
 
 ## Proposed Tasks for the master thesis
