--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -37,13 +37,11 @@ The following tasks are proposed for the specialisation project:
 
 ## Proposed Tasks for the master thesis
 
-In the MSc thesis the work should move from toy scenarios to more comprehensive simulations and real data. It is also desirable to strengthen the theoretical foundations of the work using the tools of random finite set theory such as functional derivatives. The following topics are expected to be of central importance. 
+In the MSc thesis the goal will be to scale up the results from the specialisation project from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. 
 
 * Study mixture reduction techniques to limit the number of hypotheses. 
 * Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
 * Generate more elaborate simulations and/or participate in field experiments to record real data. 
-
-This project can be expanded into a PhD or integrated PhD for a candidate with sufficient skills, background knowledge and motivation. 
 
 |<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
 | Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
@@ -52,13 +50,8 @@ This project can be expanded into a PhD or integrated PhD for a candidate with s
 | Erik Wilthil during [Autosea] experiments in Trondheimsfjorden where radar tracking was used |
 
 ## Prerequisites
-This is a challenging project that goes to the core of modern theory in sensor fusion. The following recommendations should therefore be considered. 
 
-- Experience with sensor fusion or radar systems from internships or voluntary activities will be useful.
-- It will be very useful to have had significant exposure to statistics and estimation from courses beyond ITK, e.g., from IES or IMF at NTNU, or from exchange studies. 
-- It will be useful to take the course TTK4250 Sensor Fusion in parallell with the specialization project, instead of the conventional 2.75 SP modules. 
-- The candidate must like mathematics and to analyze problems on a very detailed level.
-
+The candidate should have had the course TTK4250 Sensor Fusion, or exposure to probabilistic graphical models through other courses.
 ## References
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
 
