som links in bp

--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -37,7 +37,7 @@ The following tasks are proposed for the specialisation project:
 
 ## Proposed Tasks for the master thesis
 
-In the MSc thesis the goal will be to scale up the results from the specialisation project from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. 
+In the MSc thesis the goal will be to scale up the results from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. Possible code bases that this can build upon include [(Brekke and Tokle 2022)] and [(Garcia-Fernandez et al. 2018)].
 
 * Study mixture reduction techniques to limit the number of hypotheses. 
 * Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
@@ -73,3 +73,5 @@ Supervisor: [Edmund Brekke].
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
+[(Brekke and Tokle 2022)]: https://folk.ntnu.no/edmundfo/fusion2022preprints/BrekkeTokleExploration.pdf
+[(Garcia-Fernandez et al. 2018)]: https://ieeexplore.ieee.org/document/8289337
