som links in bp

--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -37,12 +37,8 @@ The following tasks are proposed for the specialisation project:
 
 ## Proposed Tasks for the master thesis
 
-In the MSc thesis the goal will be to scale up the results from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. Possible code bases that this can build upon include [(Brekke and Tokle 2022)] and [(Garcia-Fernandez et al. 2018)].
-
-* Study mixture reduction techniques to limit the number of hypotheses. 
-* Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
-* Generate more elaborate simulations and/or participate in field experiments to record real data. 
-
+In the MSc thesis the goal will be to scale up the results from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. Possible code bases that this can build upon include [(Brekke and Tokle 2022)] and [(Garcia-Fernandez et al. 2018)]. Ideally, this could be a collaboration with project [autosit.github.io/sf/2022/03/30/pmbm_powerful/]. 
+ 
 |<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
 | Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
 
@@ -53,7 +49,10 @@ In the MSc thesis the goal will be to scale up the results from toy examples to 
 
 The candidate should have had the course TTK4250 Sensor Fusion, or exposure to probabilistic graphical models through other courses.
 ## References
+
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
+Garcia-Fernandez, A., Williams, J., Granström, K and Svensson, L. (2018). "[Poisson multi-Bernoulli mixture filter: direct derivation and implementation.][Garcia-Fernandez et al. 2018]" IEEE Transactions on Aerospace and Electronic Systems.
+
 
 
 ## Contact
@@ -74,4 +73,5 @@ Supervisor: [Edmund Brekke].
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
 [(Brekke and Tokle 2022)]: https://folk.ntnu.no/edmundfo/fusion2022preprints/BrekkeTokleExploration.pdf
-[(Garcia-Fernandez et al. 2018)]: https://ieeexplore.ieee.org/document/8289337
+[Garcia-Fernandez et al. 2018]: https://ieeexplore.ieee.org/document/8289337
+[autosit.github.io/sf/2022/03/30/pmbm_powerful/]: https://autosit.github.io/sf/2022/03/30/pmbm_powerful/
