factor graph example in bp

--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -14,7 +14,8 @@ For each of the data association hypotheses in the prior distribution, there wil
 In the context of the JPDA, techniques have been developed for calculating such marginal probabilities without explicit hypothesis enumeration. It is possible to evaluate these exactly by formulating the problem as marginalisation in a factor graph. A more popular alternative is Loopy Belief Propagation (LBP), which also builds upon a factor graph formulation, but is more straightforward to implement due to its approximative nature.  
 
 
-|<img src="{{site.url}}/assets/ais_slide.png" width="700"> | 
+|<img src="{{site.url}}/assets/mhtfactor.png" width="700"> | 
+| Factor graph for an example with two prior hypotheses, three Bernoulli components and one measurement. |
 
 
 
@@ -42,8 +43,7 @@ In the MSc thesis the goal will be to scale up the results from toy examples to 
 |<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
 | Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
 
-|<img src="{{site.url}}/assets/wilthilsyn.jpg" width="700"> | 
-| Erik Wilthil during [Autosea] experiments in Trondheimsfjorden where radar tracking was used |
+
 
 ## Prerequisites
 
