more stuff in bp

--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -47,12 +47,15 @@ In the MSc thesis the goal will be to scale up the results from toy examples to 
 
 ## Prerequisites
 
-The candidate should have had the course TTK4250 Sensor Fusion, or exposure to probabilistic graphical models through other courses.
+The candidate should have had the course [TTK4250 Sensor Fusion], or exposure to probabilistic graphical models through other courses.
+
 ## References
+
+Williams, J. and Lau, R. (2014). "[Approximate evaluation of marginal association probabilities with belief propagation.][Williams2014]" IEEE Transactions on Aerospace and Electronic Systems, vol. 50, no. 4.
 
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
 
-Garcia-Fernandez, A., Williams, J., Granström, K and Svensson, L. (2018). "[Poisson multi-Bernoulli mixture filter: direct derivation and implementation.][Garcia-Fernandez et al. 2018]" IEEE Transactions on Aerospace and Electronic Systems.
+Garcia-Fernandez, A., Williams, J., Granström, K and Svensson, L. (2018). "[Poisson multi-Bernoulli mixture filter: direct derivation and implementation.][(Garcia-Fernandez et al. 2018)]" IEEE Transactions on Aerospace and Electronic Systems.
 
 
 
@@ -62,10 +65,12 @@ Supervisor: [Edmund Brekke].
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Williams2015]: https://ieeexplore.ieee.org/document/7272821
+[Williams2014]: https://ieeexplore.ieee.org/document/6978890
 [Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
 [(Brekke and Tokle 2022)]: https://folk.ntnu.no/edmundfo/fusion2022preprints/BrekkeTokleExploration.pdf
-[Garcia-Fernandez et al. 2018]: https://ieeexplore.ieee.org/document/8289337
+[(Garcia-Fernandez et al. 2018)]: https://ieeexplore.ieee.org/document/8289337
 [autosit.github.io/sf/2022/03/30/pmbm_powerful/]: https://autosit.github.io/sf/2022/03/30/pmbm_powerful/
+[TTK4250 Sensor Fusion]: https://www.ntnu.no/studier/emner/TTK4250#tab=omEmnet
