--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -49,8 +49,6 @@ In the MSc thesis the work should move from toy scenarios to more comprehensive 
 * Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
 * Generate more elaborate simulations and/or participate in field experiments to record real data. 
 
-This project can be expanded into a PhD or integrated PhD for a candidate with sufficient skills, background knowledge and motivation. 
-
 |<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
 | Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
 
@@ -58,12 +56,9 @@ This project can be expanded into a PhD or integrated PhD for a candidate with s
 | Erik Wilthil during [Autosea] experiments in Trondheimsfjorden where radar tracking was used |
 
 ## Prerequisites
-This is a challenging project that goes to the core of modern theory in sensor fusion. The following recommendations should therefore be considered. 
 
-- Experience with sensor fusion or radar systems from internships or voluntary activities will be useful.
-- It will be very useful to have had significant exposure to statistics and estimation from courses beyond ITK, e.g., from IES or IMF at NTNU, or from exchange studies. 
-- It will be useful to take the course TTK4250 Sensor Fusion in parallell with the specialization project, instead of the conventional 2.75 SP modules. 
-- The candidate must like mathematics and to analyze problems on a very detailed level.
+The candidate should have had the course [TTK4250 Sensor Fusion], or take it in parallell with the specialization project. Experience with sensor fusion from extracurricular activities will also be useful. 
+
 
 ## References
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
@@ -90,3 +85,4 @@ Supervisor: [Edmund Brekke].
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
+[TTK4250 Sensor Fusion]: https://www.ntnu.no/studier/emner/TTK4250#tab=omEmnet
