more stuff pmbm ais project

--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -46,7 +46,7 @@ In the specialization project the main focus will be on mastering the fundamenta
 In the MSc thesis the work should move from toy scenarios to more comprehensive simulations and real data. It is also desirable to strengthen the theoretical foundations of the work using the tools of random finite set theory such as functional derivatives. The following topics are expected to be of central importance. 
 
 * Study mixture reduction techniques to limit the number of hypotheses. 
-* Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
+* Benchmark against other approaches to AIS-radar fusion, such as Liland (2017), Gaglione (2018) or Hem (2021).
 * Generate more elaborate simulations and/or participate in field experiments to record real data. 
 
 |<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
@@ -63,10 +63,11 @@ The candidate should have had the course [TTK4250 Sensor Fusion], or take it in 
 ## References
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
 
-Habtemariam et al. (2014): “[Measurement levelAIS/radar fusion][Habtemariam2014]”, Signal Processing.
-
 Liland (2017): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
 
+Gaglione, D., Braca, P. and Soldi, G. (2018). "[Belief Propagation Based AIS/Radar Data Fusion for Multi - Target Tracking.][Gaglione2018]" IEEE Proceedings of FUSION.
+
+Hem (2021): "[Maritime multi-target tracking with radar and asynchronous transponder measurements][Hem2021]", Master's thesis, NTNU.
 
 ## Contact
 
@@ -86,3 +87,5 @@ Supervisor: [Edmund Brekke].
 [Autosea]: https://www.ntnu.edu/autosea
 [Milliampere]: https://www.ntnu.edu/autoferry
 [TTK4250 Sensor Fusion]: https://www.ntnu.no/studier/emner/TTK4250#tab=omEmnet
+[Hem2021]: https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2781021?locale-attribute=en
+[Gaglione2018]: https://ieeexplore.ieee.org/document/8455217
