more stuff pmbm ais project

--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -18,11 +18,11 @@ Of several returns in a radar image one must decide which return comes from whic
 However, radar or other exteroceptive sensors are always needed because not all ships have AIS, and because AIS depends on satellite communication with its own reliability issues. 
 
 In the [Autosea project][Autosea], both radar and AIS have been used as information sources in collision avoidance (COLAV) experiments. 
-However, the two data sources were never used together, because a sufficiently mature algorithm for fusing radar and AIS never was developed. 
+However, the two data sources were never used together, because a reliable algorithm for fusing radar and AIS never was developed. 
 
 It is not immediately obvious how radar and AIS should be fused in order to benefit maximally from the two data sources complementary properties. 
 One can, however, expect that optimal fusion only is possible if the fusion algorithm is based on an optimal approach to multi-target tracking. 
-Such an approach is provided by the Poisson Multi-Bernoulli Mixture (PMBM) filter, which has emerged as the de facto gold standard in multi-target tracking during the last decade. 
+Such an approach is provided by the Poisson Multi-Bernoulli Mixture (PMBM) filter [(Williams 2015)], which has emerged as the gold standard in multi-target tracking during the last decade. 
 
 
 ## Scope
@@ -61,11 +61,11 @@ The candidate should have had the course [TTK4250 Sensor Fusion], or take it in 
 
 
 ## References
-Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
+Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][(Williams 2015)]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
 
 Liland (2017): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
 
-Gaglione, D., Braca, P. and Soldi, G. (2018). "[Belief Propagation Based AIS/Radar Data Fusion for Multi - Target Tracking.][Gaglione2018]" IEEE Proceedings of FUSION.
+Gaglione, D., Braca, P. and Soldi, G. (2018). "[Belief Propagation Based AIS/Radar Data Fusion for Multi - Target Tracking.][Gaglione2018]" Proceedings of FUSION.
 
 Hem (2021): "[Maritime multi-target tracking with radar and asynchronous transponder measurements][Hem2021]", Master's thesis, NTNU.
 
@@ -81,7 +81,7 @@ Supervisor: [Edmund Brekke].
 | Example application 2: The same theory can be used for fusion of drone transponders with 3D airport surveillance radar. |
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
-[Williams2015]: https://ieeexplore.ieee.org/document/7272821
+[(Williams 2015)]: https://ieeexplore.ieee.org/document/7272821
 [Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
 [Autosea]: https://www.ntnu.edu/autosea
